--- a/src/components/Rightbar.module.css
+++ b/src/components/Rightbar.module.css
@@ -22,7 +22,7 @@
 }
 
 .customRightbar {
-  background-color: #13192e00;  /* Custom teal */
+  background-color: #13192e;  /* Custom teal */
 }
 
 @media (max-width: 767px) {
