--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -26,7 +26,7 @@
 }
 
 .customSidebar {
-  background-color: #13192e00;  /* Custom dark gray */
+  background-color: #13192e;  /* Custom dark gray */
 }
 
 @media (max-width: 767px) {
