--- a/src/components/Posts.module.css
+++ b/src/components/Posts.module.css
@@ -1,6 +1,64 @@
 .customPosts {
-  background-color: #0a527c69; 
-  height: 100%;
-  width: 50%;
-  min-width: 400px;
+  text-align: center;
+  background-color: #0a527c69;
+  position: absolute;
+  top: 8%;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-top: 1rem;
+  border-radius: 0.125rem;
+  box-shadow: 0 0 10px rgba(74, 222, 128, 0.5);
+  opacity: 1;
+  width: 100%;
+  max-width: 48rem;
+  height: 85%; /* maxhöjd för att aktivera scroll vid behov */
+  overflow-y: auto; /* tillåter vertikal scroll */
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+
+}
+
+
+.postsTitle {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #ffffff;
+}
+
+.postCard {
+  background-color: #4b5e9e00;
+  padding: 1rem;
+  border-bottom: 0.01px solid springgreen;
+  width: 100%;
+  box-sizing: border-box; /* Säkerställer att padding inte påverkar höjd */
+}
+
+.postCardTitle {
+  font-size: 1.25rem;
+  font-weight: 500;
+  color: #4ade80;
+}
+
+.postCardText {
+  color: #e5e7eb;
+}
+
+.customPosts::-webkit-scrollbar {
+  width: 8px; /* bredden på scrollbaren */
+}
+
+.customPosts::-webkit-scrollbar-track {
+  background: #1f2937; /* spåret bakom scrollen */
+  border-radius: 4px;
+}
+
+.customPosts::-webkit-scrollbar-thumb {
+  background-color: #4ade80; /* själva "scrollgrejen" */
+  border-radius: 4px;
+  border: 2px solid #1f2937; /* lite padding-effekt */
+}
+
+.customPosts::-webkit-scrollbar-thumb:hover {
+  background-color: #22c55e; /* hover-effekt */
 }
