--- a/src/components/Posts.module.css
+++ b/src/components/Posts.module.css
@@ -1,6 +1,6 @@
 .customPosts {
   padding: 1.5rem;
-  background-color: #011242;
+  background-color: #8bd9d3;
   overflow-y: auto;
   max-width: 48rem;
   margin: 0 auto;
@@ -11,7 +11,7 @@
 .postsTitle {
   font-size: 1.75rem;
   font-weight: 700;
-  color: #4ade80;
+  color: #0cab31;
   margin-bottom: 1.5rem;
   text-align: center;
   letter-spacing: 0.02em;
@@ -19,7 +19,7 @@
 
 /* Individual post card */
 .postCard {
-  background: #09066039;
+  background: #0906607d;
   padding: 1.25rem;
   border-radius: 0.2rem;
   margin-bottom: 0.25rem;
